--- a/templates/popup.html
+++ b/templates/popup.html
@@ -161,11 +161,11 @@
   <!-- Row 2: delete+Vol reset+help (left) / add+expand+collapse+lock (right) -->
 <div class="abgm-row abgm-bgmbar2" style="margin-top:8px; align-items:center; gap:10px;">
   <div class="menu_button" id="abgm_delete_selected" title="Delete selected entrys">
-    <i class="fa-solid fa-trash"></i> Entry
+    <i class="fa-solid fa-trash"></i> Ent
   </div>
 
   <!-- Vol reset -->
-<div id="abgm_reset_vol_selected" class="menu_button abgm-iconbtn" title="Reset volume of selected">
+<div class="menu_button abgm-iconbtn" id="abgm_reset_vol_selected" title="Reset volume of selected">
   <i class="fa-solid fa-rotate-left"></i> Vol
 </div>
 
