--- a/templates/popup.html
+++ b/templates/popup.html
@@ -165,7 +165,7 @@
   </div>
 
   <!-- Vol reset -->
-<div class="menu_button abgm-iconbtn" id="abgm_reset_vol_selected" title="Reset volume of selected">
+<div class="menu_button" id="abgm_reset_vol_selected" title="Reset volume of selected">
   <i class="fa-solid fa-rotate-left"></i> Vol
 </div>
 
