--- a/templates/window.html
+++ b/templates/window.html
@@ -45,7 +45,41 @@
         <div id="autobgm_help_toggle" class="menu_button autobgm-menu-btn" title="Help">
           <i class="fa-solid fa-book"></i>
         </div><div id="autobgm_help_text" class="autobgm-helptext" style="display:none;">
-          사용방법: Settings &gt; 프리셋 선택 &gt; BGM 추가 &gt; 각 BGM에 키워드 입력
+          <ul>
+  <li>
+    <strong>Now Playing: </strong>
+    현재 재생 중인 곡 등의 상태를 확인하거나 특정 기능들을 간단히 조작할 수 있는 작은 창.
+    키워드 모드를 포함한 다섯 가지 재생 모드 중 무엇인지, 현재 재생 중인 곡은 어느 프리셋의 파일인지,
+    재생 중인지 정지 중인지 등을 확인할 수 있음. 이외에 후술할 디버그 모드를 통해 다른 정보도 확인 가능.
+    <ul>
+      <li>
+        <strong>☆(Use Default: OFF) / ⭐(Use Default: ON): </strong>
+        "use default when no keyword" 기능을 사용할지 여부를 바꿔주는 버튼. 해당 기능은 키워드 모드에서 유의미함.
+        ☆는 해당 기능 비활성화, ⭐는 해당 기능 활성화.
+      </li>
+      <li>
+        <strong>⏹️(Stopped) / ⏸️(Paused) / ▶️(Playing): </strong>
+        현재 재생 상태를 조작할 수 있는 버튼. ⏹️는 현재 확장이 비활성화 상태일 때 뜸.
+        이 상태에서는 재생 버튼이나 재생 모드 조작 버튼이 아예 안 눌릴 거임.
+        작동하려면 확장을 켜주면 됨. ⏸️는 현재 일시정지 상태. ▶️는 현재 재생 중인 상태.
+      </li>
+      <li>
+        <strong>▶️(Manual) / 🔂(Loop One) / 🔁(Loop List) / 🔀(Random) / 💬(Keyword): </strong>
+        재생 모드를 바꿀 수 있는 버튼.
+        ▶️는 단일 모드로, 한 곡 재생해두면 종료 후 그대로 끝남.
+        🔂는 단일 무한 재생 모드(Loop One).
+        🔁는 현재 프리셋의 BGM들을 Sort로 설정한 순서대로 무한 재생해 주는 리스트 루프 모드(Loop List).
+        🔀는 현재 프리셋의 BGM들을 랜덤(Random)으로 재생해 주는 모드.
+        💬는 키워드 인식 기반의 로직에 따라 재생해 주는 모드(Keyword).
+        키워드 모드에 대한 자세한 설명은 "Modal" 하위 항목에 있음.
+      </li>
+    </ul>
+  </li>
+
+  <li><strong>Enabled(전원 모양): </strong>해당 확장을 활성화 / 비활성화 시킬 수 있음</li>
+  <li><strong>Help(책): </strong>확장 메뉴에서 보이는 버튼 등에 대한 간략한 설명을 볼 수 있음</li>
+  <li><strong>Settings(톱니바퀴): </strong>해당 확장의 모달을 열어 상세 설정을 할 수 있음</li>
+</ul>
         </div>
       </div>
 
