--- a/templates/popup.html
+++ b/templates/popup.html
@@ -125,7 +125,7 @@
 
         <!-- 모달 설명 -->
         <div class="abgm-minihelp" id="abgm_modal_help" style="display:none;">
-          <b># AutoBGM 설명</b>b>
+          <b># AutoBGM 설명</b>
           <ul>
   <li>
     <strong>Now Playing: </strong>
@@ -192,7 +192,7 @@
 
         <!-- 프리셋 설명 -->
       <div class="abgm-minihelp" id="abgm_preset_help" style="display:none;">
-          <b># Presets 설명</b>b>
+          <b># Presets 설명</b>
 <ul>
   <li><strong>프리셋 추가(+): </strong>새 프리셋 생성 기능</li>
   <li>
@@ -299,7 +299,7 @@
 
   <!-- 브금 리스트 설명 -->
   <div class="abgm-minihelp" id="abgm_bgm_help" style="display:none;">
-    <b># BGM List 설명</b>b>
+    <b># BGM List 설명</b>
     <ul>
             <li><strong>MP3 파일 추가(음표): </strong>특정 경로에 있는 MP3 파일을 인식시켜줄 수 있음</li>
             <li><strong>ZIP 파일 추가(ZIP): </strong>특정 경로에 있는 ZIP 파일을(MP3 파일이 들어가 있는 ZIP) 인식시켜줄 수 있음</li>
