--- a/templates/window.html
+++ b/templates/window.html
@@ -80,7 +80,13 @@
         </div>
       </div>
 
-      <!-- 4) Settings 버튼 -->
+      <!-- 4) Debug 버튼 -->
+      <div class="autobgm-menublock" style="margin-top:8px;">
+      <div id="autobgm_debug_btn" class="menu_button autobgm-menu-btn" title="Debug: OFF">
+  <i class="fa-solid fa-bug"></i>
+</div>
+
+      <!-- 5) Settings 버튼 -->
       <div class="autobgm-menublock" style="margin-top:8px;">
         <div id="autobgm_open" class="menu_button autobgm-menu-btn" title="Settings">
           <i class="fa-solid fa-gear"></i>
