--- a/templates/popup.html
+++ b/templates/popup.html
@@ -150,7 +150,7 @@
         프리셋의 BGM을 랜덤 순서로 무한 재생. 활성화 방법은 2가지가 있음
         <ul>
           <li>🍏 아무 곡이나 재생 → Play Mode를 Manual에서 Random으로 변경 (첫 곡을 원하는 곡으로 시작 가능)</li>
-          <li>🍏 Play Mode를 Random으로 설정 → Enabled로 확장을 껐다 켜기</li>
+          <li>🍏 아무 곡도 재생 중이지 않았을 시 Play Mode를 Random으로 설정 → Enabled로 확장을 껐다 켜기</li>
         </ul>
       </li>
     </ul>
