--- a/templates/popup.html
+++ b/templates/popup.html
@@ -173,6 +173,9 @@
   <div class="abgm-card-h">
     <b>BGM List</b>
     <div class="abgm-row">
+      <div class="menu_button" id="abgm_free_open" title="Free Sources">
+        <i class="fa-solid fa-wand-magic-sparkles"></i>
+      </div>
       <div class="menu_button" id="abgm_bgm_add" title="Add MP3">
         <i class="fa-solid fa-music"></i>
       </div>
